25 pages are format

--- a/007.tex
+++ b/007.tex
@@ -4426,415 +4426,297 @@ sathxlagaLanunx oLagoLuLxtatxde.}}
   liMgadalilx nelesuvaMte mADuvudAgali sulaBavalalx (9:403).}}
 \end{entry}
 
-%raghu, gv 55, double page 135, ullekha 133
-
 \begin{entry}
 \word{nenahu}
-\src{va}
-\mng{vacanakAraru I padavanunx kaniSaThx nAlukx athaRgaLalilx
-  baLasiruvaMte kANutatxde.}\\
-\imng{1. iceCx athavA nidhARra. `A nenaheV
+\meaning{\arthanonum{vacanakAraru I padavanunx kaniSaThx nAlukx athaRgaLalilx
+  baLasiruvaMte kANutatxde.}}
+\newmeaning{\artha{iceCx athavA nidhARra. `A nenaheV
   jAcnxnashakitxyAgitutx'. (11:22-32) eMbalilx saqSiTxsabeVkeMba
   parashivana nidhARraveV cicaCxkitxyAgi alilxMda, muMde saqSiTxkAyaR
-  pArxraMBavAgutatxde eMbathaRvide.}\\
-\imng{2. ahaM. `nenahu  niHpatiyAda matetx...liMgaveMba
+  pArxraMBavAgutatxde eMbathaRvide.}}
+\newmeaning{\artha{ahaM. `nenahu  niHpatiyAda matetx...liMgaveMba
   nAmavaDagitutx'. (9:249) jAcnxtaqBAva athavA ahaM aDagidAga,
-  liMgaveMba jecnxVya\-BAvavU aDagutatxde eMbathaRvide.}\\
-\imng{3. manasusx athavA budidhx. `nenahinalilx kuruhugoMDu niMdu, A
+  liMgaveMba jecnxVya\-BAvavU aDagutatxde eMbathaRvide.}}
+\newmeaning{\artha{manasusx athavA budidhx. `nenahinalilx kuruhugoMDu niMdu, A
   nenahe IshAnayxmUtiR malilxkAjuRna liMgakekx seletaMdudu', (9:262)
   eMbalilx dhAyxnanirata budidhxyalilx (manasisxnalilx) parashiva
-  nelegoLuLxtAtxne eMbathaRvide.}\\
-\imng{4. nenapu. `nimamx nenahilalxde niBARgayxnAde' (1:257) eMbalilx
+  nelegoLuLxtAtxne eMbathaRvide.}}
+\newmeaning{\artha{4. nenapu. `nimamx nenahilalxde niBARgayxnAde' (1:257) eMbalilx
   shivananunx nenapisikoLaLxde (dhAyxnisade) keTeTx eMbathaRvide.}
-
-\src{kA}
-\gl{nAmapada}
-\info{shirxV.Sa.a.va.}{aikayxsathxla pa-58}{288}{1944}
-\begin{shl}
-nenahu - tananx hiMdina jiVvanada samxraNe.
-\end{shl}
+\ullekha{vacanadalilx nAmAmaqta tuMbi... manadalilx nimamx nenahu tuMbi... (savasaM. 1; basava. 492-118); iSaTxliMgave aMgaliMga pArxNaliMgave manaliMgavAyitutx noVDA... mana liMgavAgi nenahugeTiTxtutx... (savasaM. 2; alalxma. 947-285); liMgadalilx satikxrXyAcArava manasoVMki Acarisuvalilx... A aBAyxsakirxV balidu liMgadalilx nenahu niMdu... (savasaM. 3; cenanxba. 1524-555); enanx kulasUtakava kaLedAta basavaNaNx... enanx nenahusUtakava kaLedAta basavaNaNx... (savasaM. 5; nAgalA. 791-253); jaladalilx udayisi matetx jalavu tAnalalx... basavaNaNxna nenahu suKasamudarxvayAyx!... (savasaM. 4; sidadhxrA. 1397-403).}}
 \end{entry}
 
 \begin{entry}
 \word{nenahu mAtarx}
-\src{va}
-\mng{saqSiTx mADabeVkeMba iceCx parashivanige baMdAga avanu matAtxva
+\meaning{\arthanonum{saqSiTx mADabeVkeMba iceCx parashivanige baMdAga avanu matAtxva
   upAdAnakAraNada sahAyavilalxde keVvala nenahu athavA citutx athavA
   citfshakitxyiMda saqSiTx mADutAtxne. hiVge saqSiTx elalxvu
-  parashivana citfshakitxya vividha rUpAMtara. (7:578)}
+  parashivana citfshakitxya vividha rUpAMtara. (7:578)}}
 \end{entry}
 
 \begin{entry}
 \word{nenahusUtaka}
-\src{kA}
-\gl{nA}
-\mng{SaTasxthXlagaLiganusAravAgiruva kulasUtaka, CalasUtaka, tanusUtaka, manasUtaka, nenahusUtaka matutx BAvasUtaka eMba Aru bageya sUtakagaLalilx oMdu; tananx hiMdina jiVvanada samxraNeyiMduMTAguva mAlinayx:}
-\expl{shirxVguru pUvARsharxyamaM kaLedu punajARtana mADida baLika ...elilxya kulasUtaka elilxya CalasUtaka elilxya tanusUtaka elilxya manasUtaka elilxya nenahusUtaka elilxya BAvasUtaka ivaneMtU hiDiyalAgadu sadaBxkatxnu (alalxma. ka. 374-1020); Aru sathxlagaLa parxkAra Aru sUtakagaLu ive avu- kulasUtaka, CalasUtaka, tanusUtaka, manasUtaka, nenahusUtaka, BAvasUtaka eMdive (shivAkoV. 207-393).}
-\end{entry}
-
-\begin{entry}
-\word{nere}
-\src{kA}
-\gl{kirxyApada}
-\info{saMvasaM. 1}{1229}{387}{2001}
-\begin{shl}
-I nalalxna beVTada kUTada pariyanu\\
-EneMdu heVLuve ? vipariVta keLadi.\\
-puruSa shakitxyAgi, shakitx puruSanAgi\\
-neredu suKisuvanu keVLA keLadi.\\
-ati kAmi vipariVtanu uriliMgadeVvanu,\\
-nereyalu nerevudu manadicecx keLadi.
-\end{shl}
-\end{entry}
-
-\begin{entry}
-\word{neVje neVje}
-\src{kA}
-\gl{}
-\info{pwrx.kA.}{14-35}{203}{}
-\begin{shl}
-neVjeneVjegaLiMdaliMdADi
-\end{shl}
+\meaning{\arthanonum{SaTasxthXlagaLiganusAravAgiruva kulasUtaka, CalasUtaka, tanusUtaka, manasUtaka, nenahusUtaka matutx BAvasUtaka eMba Aru bageya sUtakagaLalilx oMdu; tananx hiMdina jiVvanada samxraNeyiMduMTAguva mAlinayx.}
+\ullekha{shirxVguru pUvARsharxyamaM kaLedu punajARtana mADida baLika ...elilxya kulasUtaka elilxya CalasUtaka elilxya tanusUtaka elilxya manasUtaka elilxya nenahusUtaka elilxya BAvasUtaka ivaneMtU hiDiyalAgadu sadaBxkatxnu (alalxma. ka. 374-1020); Aru sathxlagaLa parxkAra Aru sUtakagaLu ive avu- kulasUtaka, CalasUtaka, tanusUtaka, manasUtaka, nenahusUtaka, BAvasUtaka eMdive (shivAkoV. 207-393); shirxVgurusAvxmi shiSayxna pUvARsharxyamaM kaLedu... elilxya nenahusUtaka elilxya BAvasUtaka... (savasaM. 2; alalxma. 1549-460); kakakxyayxna parxsAdava koMDenanx kulasUtaka hoVyitatxyAyx... teluga jomamxyayxna parxsAdava koMDenanx nenahusUtaka... (savasaM. 6; amugi. 325-108); enanx Bavitanava kaLedu Bakatxna mADidiriyayayx... nenahusUtaka BAvasUtakaveMba... (savasaM. 11; toVMTasi. 157-72); enanx kulasUtakava kaLedAta basavaNaNx... enanx nenahusUtakava kaLedAta basavaNaNx... (savasaM. 5; nAgalA. 791-253).}}
 \end{entry}
 
 \begin{entry}
 \word{neVtarx}
-\src{kA}
-\gl{nA}
-\mng{paMcajAcnxneVMdirxyagaLalilx oMdu; noVTadiMda jAcnxnavanunxMTumADikoDuva iMdirxya; kaNuNx:}
-\expl{shorxVtarx neVtarx GArxNa jihevx tavxkukx paMceVMdirxyaMgaLa BeVdavalalxde liMgapArxNava mADi nijaparxsAdava nelegoLisuva BeVda (sidadhxrA. samava. 4-40-138).}
+\meaning{\arthanonum{paMcajAcnxneVMdirxyagaLalilx oMdu; noVTadiMda jAcnxnavanunxMTumADikoDuva iMdirxya.}
+\ullekha{shorxVtarxdalilx barxhamxcAriyAgirabeVku sharaNanu... neVtarxdalilx barxhamxcAriyAgirabeVku sharaNanu... (savasaM. 1; basava. 1370-378); maMjaraneVtarxdalilx uBayacaMdarxra kAbavarAro?... (savasaM. 2; alalxma. 240-73); paqthivx apupx teVja vAyu AkAshaveMba paMcaBUtaMgaLalilx... shorxVtarx neVtarx GArxNa tavxkukx jihevx vAkukx pANi pAda... (savasaM. 3; cenanxba. 1353-478); neVtarxmadhayxdalilx sUsuva tirxNeVtarxna rUpave sidadhxrAmayayxnAda... (savasaM. 5; gaMgAMbi. 757-239); tanutarxya malatarxyaMgaLeMba shaMkeyalilx keDade... neVtarxda keYyiMda guruliMgAcaRneya... (savasaM. 4; sidadhxrA. 585-167).}}
 \end{entry}
 
 \begin{entry}
 \word{neVtarxmaMtarx}
-\src{kA}
-\gl{nA}
-\mng{Aru bageya nAyxsAkaSxramaMtarxgaLalilx oMdu:}
-\expl{hwrxM eMbudu neVtarxmaMtarxM (shUnayxmaM. samava. 11-621-1353); shariVrada BAgagaLalilx maMtarxnAyxsa mADuvudeV I maMtarxda kAyaRvAgirutatxde ...OM hwrxM neVtarxtarxyAya pwSaTf -idu neVtarxmaMtarxveMdu heVLalapxDutatxde (shivAkoV. 157-256).}
+\meaning{\arthanonum{Aru bageya nAyxsAkaSxramaMtarxgaLalilx oMdu.}
+\ullekha{hwrxM eMbudu neVtarxmaMtarxM (savasaM. 11; shUnayxmaM. 1353-621); shariVrada BAgagaLalilx maMtarxnAyxsa mADuvudeV I maMtarxda kAyaRvAgirutatxde ...OM hwrxM neVtarxtarxyAya pwSaTf -idu neVtarxmaMtarxveMdu heVLalapxDutatxde (shivAkoV. 157-256); inunx SaDadhavxdutapxtayxvadeMteMdaDe... A parxNavada daMDakasavxrUpadalilx neVtarxmaMtarx utapxtayx... (savasaM. 13; bAlasaM. 913-398); baLikakxM, SaDaMgamaMtarxnAyxsamaM peVLevxneMtene... UdharxvXpaTiTxkeyalilx hwrxM eMba neVtarxmaMtarxmaM... (savasaM. 11; imamxDi. 1391-646).}}
 \end{entry}
 
 \begin{entry}
 \word{neVtarxliMgasamarasa}
-\src{va}
-\mng{liMgAMga sAmarasayx sAdhisidavana neVtarxvU liMgadalilx
-  oMdAgutatxde (10:1594).}
+\meaning{\arthanonum{liMgAMga sAmarasayx sAdhisidavana neVtarxvU liMgadalilx
+  oMdAgutatxde.}}
 \end{entry}
 
 \begin{entry}
 \word{neVti}
-\src{kA}
-\gl{nAmapada}
-\info{su.ciM.}{7-20}{88}{}
-\begin{shl}
-sUtakada\\
-GAtakaM\\
-BArxye\\
-sUtakaMgaLalAda tanugaLa\\
-neVtigaLAda mahAtamx gurukara\\
-jAtarAdavarAgi BakatxratiVtarenisuvaru.
-\end{shl}
-\gl{nA}
-\mng{haThayoVgada karxmagaLalilx oMdu bage; hanenxraDaMgula udadxviruva dAravanunx bAyi\-yiMda tUrisi mUginiMda tegeyuvudu:}
-\expl{hanenxraDaMgula parxmANada nUlanu nAsikAdAvxradalelxV{\ri}si bAyalilx tegevudeV neVtiyenisuvudu (pArake. 26-1).}
+\meaning{\arthanonum{haThayoVgada karxmagaLalilx oMdu bage; hanenxraDaMgula udadxviruva dAravanunx bAyi\-yiMda tUrisi mUginiMda tegeyuvudu.}
+\ullekha{hanenxraDaMgula parxmANada nUlanu nAsikAdAvxradalelxV{\ri}si bAyalilx tegevudeV neVtiyenisuvudu (pArake. 26-1); nenevaDe manavilalx. tanuvinAse muninxlalx... taninxMda tAnAdudu Binanxvilalxde niMda nijavu! (savasaM. 2; alalxma. 1325-390); aMgaliMga nijasaMbaMdhavanunxLaLx nijaviVrasheYva saMpananxrAda... liMgava BinanxviTuTx kaMDu jaMgamada jAtiviDidu neVtimADi... (savasaM. 3; cenanxba. 867-260); halavuterada kirxVyanAdharisi naDevalilx... iMtiV anayxva neVtigaLedu, tanage anayxvilalxduda aMgiVkarisi... (savasaM. 5; akakxmamx. 584-184); apupxvinoLagaNa aginxyaMte apupxvinoLage beredu... sathxladalilxdudx sathxlava neVtigaLedalilx oLagu horagAyitutx... (savasaM. 8; moVLimA. 1457-492); AcAraliMgava parxsananxtavxdiMda Bakatx bayalAdanu... I SaDivxdhaliMgada parxsanenxVti parxsAdadalilx... (savasaM. 11; toVMTasi. 660-294).}}
 \end{entry}
 
 \begin{entry}
 \word{neVterxVMdirxya}
-\src{kA}
-\gl{nA}
-\mng{= neVtarx:}
-\expl{neVterxVMdirxyakekx aginxyeMba mahABUta sUyaRnu adhideVvate alilx rUpu viSaya (karaNa. 661-28).}
-\end{entry}
-
-\begin{entry}
-\word{neVma}
-\src{va}
-\mng{(noVDi : {\bf varxta shiVla neVma})}
-
-\src{kA}
-\gl{}
-\info{gu.boVdhA}{parx.sathxla- pa 108}{15}{1974}
-\begin{shl}
-neVma - neVmadali po\char'273maDutalihuvadaLa......
-\end{shl}
+\meaning{\arthanonum{neVtarx; neVterxVMdirxyakekx aginxyeMba mahABUta sUyaRnu adhideVvate alilx rUpu viSaya.}
+\ullekha{ayayx vishavxtoVcakuSxruta' eMdudAgi... kurUpada neVterxVMdirxyaveMdu, shivAcAra sadadhxmiRgaLa niMdisuva... (savasaM. 2; alalxma. 805-235); parxsAdige aginxge aMga, A aMgakekx nirahaMkArave hasatx... A kaLege neVterxVMdirxyave muKa... (savasaM. 3; cenanxba. 1366-484); shorxVterxVMdirxyavanu A iMdirxyadoDane... neVterxVMdirxyavanu I iMdirxyadoDane kUDida aginxyanu... (savasaM. 11; savxtaMtarx. 1006-488); kamaRsAdAKayxsavxrUpavAda AcAraliMgadalilx... shikAramaMtarxsavxrUpavAda neVterxVMdirxyasaMyoVgava... (savasaM. 14; SaNumxKa. 774-352); aginxyoLagaNa aginx neVterxVMdirxya... (savasaM. 14; heVmaga. 993-461).}}
 \end{entry}
 
 \begin{entry}
 \word{neYmititxka}
 \src{saM}
-\mng{nitayx muMtAda paMcasAdAcAragaLalilx oMdu bageya
+\meaning{\arthanonum{nitayx muMtAda paMcasAdAcAragaLalilx oMdu bageya
 AcAra, kamaR, nimitatxvanunx Asharxyisi mADabeVkAda kamaR. garxhaNAdigaLa saMdaBaR\-dalilx
-mADabeVkAda kamaR.}
+mADabeVkAda kamaR.}}
+\medskip
 \begin{shl}
 neYmititxkaM kArxMtipAtagarxhaNagarxhasaMBaveV |\\
 kataRvayxM kamaR veVdoVkatxM kAlasApeVkaSxmucayxteV ||
 \end{shl}
+\medskip
 \pauthor{(kirx.sA., BA-2, 5.18)}
+\medskip
+\newmeaning{\ullekha{pArxNaliMgasaMbaMdhiyAda sadaBxkatxnu... idu kAraNa, nitayxneYmititxka paMcapavaR visheVSatithigaLalilx... (savasaM. 6; uripe. 1455-508).}}
 \end{entry}
 
 \begin{entry}
 \word{neYmititxkaparikarxma}
 \src{saM}
-\mng{nitayxparikarxma, neYmititxkaparikarxma eMba
+\meaning{\arthanonum{nitayxparikarxma, neYmititxkaparikarxma eMba
 eraDu vidha parikarxmagaLalilx oMdu. nimitatxvanunx anusarisi mADuva parikarxma.
 aSaTxmi, catudaRshi, sUyaRgarxhaNa, caMdarxgarxhaNAdi saMdaBaRgaLalilx mADuva parikarxma
-neYmititxkaparikarxma.}
+neYmititxkaparikarxma.}}
+\medskip
 \begin{shl}
 aSaTxmAyxM ca catudaRshAyxM pakaSxyoVruBayoVrapi |\\
 veYdhaqtw ca vayxtiVpAteV viSuvAyanayoVrapi ||\\
 caMdarxsUyaRgarxhaNayoVH savxjanAmxdivisheVSataH |\\
 parikarxmoV{\char'263}yaM kataRvayxH sa neYmititxka ucayxteV ||
 \end{shl}
+\medskip
 \pauthor{(sheY.ra., 13. 159-161)}
 \end{entry}
 
 \begin{entry}
 \word{neYveVdayx}
 \src{saM}
-\mng{pUjoVpacAragaLalilx oMdu. deVvategaLige apiRsida Pala
+\meaning{\arthanonum{pUjoVpacAragaLalilx oMdu. deVvategaLige apiRsida Pala
 modalAda darxvayxgaLu. madhura modalAda Aru rasagaLiMda kUDiruva deVvategaLige apiRtavAguva
-nAnA BakaSxyXgaLu.}
+nAnA BakaSxyXgaLu. apaRNe.}}
+\medskip
 \begin{shl}
 savaRkAmAMsutx neYveVdayxM datAvx taqpitxratoV BaveVtf |
 \end{shl}
+\medskip
 \pauthor{(shi.ta.ra., 8. 7. 60)}
+\medskip
 \begin{shl}
 neYveVdayxM SaDarxsoVpeVtaM nAnA BakaSxyX samanivxtamf |
 \end{shl}
-
-\src{va}
-\mng{apaRNe.}
-
-\src{kA}
-\gl{nAmapada}
-\info{pA.soVpu.}{3-36}{38}{1912}
-\begin{shl}
-neYveVdayx eMdare pUjAkAladalilx liMgakekx mADuva haNuNx, BakaSxyX
-muMtAdavugaLa samapaRNe matutx Aga samapiRsuva padAthaRgaLu 
-\end{shl}
-\mng{pariNAmigaLalalxdavaralilx neYveVdayxva nolelxyayAyx niVnu.}
-\gl{nA}
-\mng{pUjAkAladalilx liMgakekx mADuva haNuNx, BakaSxyX muMtAdavugaLa samapaRNe matutx Aga samapiRsuva padAthaRgaLu:}
-\expl{pariNAmigaLalalxdavaralilx neYveVdayxvanolelxyayAyx niVnu (akakxma. samava. 5-57-179); liMgakekx ...neYveVdayxva samapiRsuvalilx savaRiMdirxyaMgaLa keVDu (koVlashAM. samava. 7-55-133).}
+\medskip
+\newmeaning{\ullekha{pavitarxliMgakekx apavitarxva koDalolelxneMbudenanx BASe... kUDalasaMgayAyx, nimage neYveVdayxvenage parxsAda tapapxdu... (savasaM. 1; basava. 1266-349); enanx haqdayakamala madhayxdalilx... enanx niBArxMtiya neYveVdayx, enanx niviRSayave tAMbUla... (savasaM. 2; alalxma. 982-295); shivasaMsAkxriyAgi liMgave pArxNavAgidadx baLika... asaMsAkxrikaqtaM pAkaM shaMBoVneYRveVdayxmeVva na... (savasaM. 3; cenanxba. 1601-583); nAnuNaNxda munanxve jaMgamakekx... amaqtAnAnxdi neYveVdayxva niVDuve... (savasaM. 5; akakxma. 253-74); halaarigeLeya niVnu, mUvarige mugadhx niVnu... tanu ninage neYveVdayx kapilasidadhxmalilxkAjuRnA. (savasaM. 4; sidadhxrA. 1139-326).}}
 \end{entry}
 
 \begin{entry}
 \word{neYSiThxka Bakitx}
-\src{kA}
-\gl{gu. boVdhA}
-\info{}{taqsathxla- pa-138}{88}{1974}
-\begin{shl}
-BakitxyA\char'273\char'304MTu sadaBxkitx neYSiThxkaBakitx............
-\end{shl}
+\meaning{\ullekha{Bakatx maheVshavxra parxsAdi pArxNaliMgi sharaNeYkayxreMba... kirxyAshakitxge sadaBxkitx, jAcnxnashakitxge neYSiThxkaBakitx... (savasaM. 10; jakakxNa. 897-516).}}
 \end{entry}
 
 \begin{entry}
 \word{neYSiThxkabarxhamxcAriV}
 \src{saM}
-\mng{neYSiThxkabarxhamxcAri, BwtikabarxhamxcAri
+\meaning{\arthanonum{neYSiThxkabarxhamxcAri, BwtikabarxhamxcAri
 eMba eraDu vidha barxhamxcAri BeVdagaLalilx obabx. bAlayxdiMda badukiruvavaregU
-barxhamxcAriyAgiruvavanu.}
+barxhamxcAriyAgiruvavanu.}}
+\medskip
 \begin{shl}
 barxhamxcAriV divxdhA porxVkotxVneYSiThxkoV BwtikasitxvXti |\\
 neYSiThxkoV madhayxmoV jecnxVyoV Bwtikasutx tatoV{\char'263}dhamaH ||\\
 AkwmArAdf barxhamxcAriV yAvajijxVvaM sa neYSiThxkaH |
 \end{shl}
+\medskip
 \pauthor{(shi.ta.ra., 9.7. 47-48)}
 \end{entry}
 
 \begin{entry}
 \word{neYSiThxkaBakitx}
-\src{kA}
-\gl{nA}
-\mng{= niSAThxBakitx:}
-\expl{maMtarxvana{\ri}tu maheVshavxranAgi guruliMgava neleyaMgoMDude neYSiThxkaBakitxyeMbenayayx (jakakxNa. samava. 10-646-1441).}
+\meaning{\arthanonum{niSAThxBakitx.}
+\ullekha{maMtarxvana{\ri}tu maheVshavxranAgi guruliMgava neleyaMgoMDude neYSiThxkaBakitxyeMbenayayx (jakakxNa. samava. 10-646-1441).}}
 \end{entry}
 
 \begin{entry}
 \word{neYSiThxkiVBakitx}
 \src{saM}
-\mng{dheyxVyavAda vasutxvinalilx acalavAda
+\meaning{\arthanonum{dheyxVyavAda vasutxvinalilx acalavAda
 niSeThxyiMdiruvudu niSAThxBakitx, adeV neYSiThxkiVBakitx. SaTfsathxlagaLalilx oMdAda
-mAheVshavxrasathxlada sAdhakanige saMbaMdhisida Bakitx.}
+mAheVshavxrasathxlada sAdhakanige saMbaMdhisida Bakitx.}}
+\medskip
 \begin{shl}
 neYSiThxkiVBakitxriteyxVva kiVtiRtABakitxtatapxreYH |\\
 tathA mAheVshavxraM nAma sathxlamasayx savxrUpataH ||
 \end{shl}
+\medskip
 \pauthor{(a.sU., 5. 73)}
 \end{entry}
 
 \begin{entry}
 \word{neYSiThxke}
-\src{kA}
-\gl{nA}
-\mngnum{AdhAradiVkeSxya upaviBAgagaLalilx oMdu; shivadhamiRNi eMba parxkAradalilxruva BUtika matutx neYSiThxke eMba eraDu vidhagaLalilx oMdu; varxta, niyamagaLa AcaraNegaLanonxLagoMDudu:}
-\expl{shivadhamaRvA BUtikaM neYSiThxkeyumenutatxvu yugamxvalilx BUtikave suvarxta moVkaSxvivu yugaLayukatxvA varxtavadaMgavanuLaLxtanake naDapude neYSiThxke (viVsheYpu. 6-97-62).}
-\mngnum{oMbatutx bageya BakitxgaLalilx oMdu:}
-\expl{BakitxgaLu- sharxdAdhx, neYSiThxkA, avadhAna, anuBAva, AnaMda, samarasa, paripUNaR, aparxmANa, niravaya ivu Bakitxya vidhagaLu (shivAkoV. 190-326).}
+\meaning{\arthanonum{AdhAradiVkeSxya upaviBAgagaLalilx oMdu; shivadhamiRNi eMba parxkAradalilxruva BUtika matutx neYSiThxke eMba eraDu vidhagaLalilx oMdu; varxta, niyamagaLa AcaraNegaLanonxLagoMDudu. oMbatutx bageya BakitxgaLalilx oMdu:}
+\ullekha{shivadhamaRvA BUtikaM neYSiThxkeyumenutatxvu yugamxvalilx BUtikave suvarxta moVkaSxvivu yugaLayukatxvA varxtavadaMgavanuLaLxtanake naDapude neYSiThxke (viVsheYpu. 6-97-62); BakitxgaLu- sharxdAdhx, neYSiThxkA, avadhAna, anuBAva, AnaMda, samarasa, paripUNaR, aparxmANa, niravaya ivu Bakitxya vidhagaLu (shivAkoV. 190-326).}}
 \end{entry}
 
 \begin{entry}
 \word{neYSiThxreVdiVkASx}
 \src{saM}
-\mng{shivadhamiRNiVdiVkeSxya BwtikiV, neYSiThxkiV
+\meaning{\arthanonum{shivadhamiRNiVdiVkeSxya BwtikiV, neYSiThxkiV
 eMba eraDu vidha diVkeSxgaLalilx oMdu parxkAra. shariVrapAdadavarege (AjiVvapayaRMta)
-nivaRhisuva diVkeSx.}
+nivaRhisuva diVkeSx.}}
+\medskip
 \begin{shl}
 BwtikiV neYSiThxkiV ceVtidivxdhA sA shivadhamiRNiV |\\
 shariVrapAtapayaRMtaM varxtA sA neYSiThxkiV matA ||
 \end{shl}
+\medskip
 \pauthor{(shi.ta.ra., 9.7, 24-25)}
 \end{entry}
 
 \begin{entry}
 \word{neYSeThx}
-\src{kA}
-\gl{nA}
-\mng{= niSAThxBakitx:}
-\expl{naMbugege iMbAgade neYSeThx nelegoLaLxdu neYSeThx nelegoLaLxde ecacx{\ra}vacocxtatxdu (cenanxba. samava. 3-475-1332); sadaBxkitx nijaneYSeThxya tiLidu satisutarige sadAcArada sanAmxgaRva toV{\ri} ...nivaRMcakatavxdiMda a{\ri}dAcarisabalAlxtane acacxsharaNa noVDA (maDimA. samava. 8-247-647).}
+\meaning{\arthanonum{niSAThxBakitx.}
+\ullekha{naMbugege iMbAgade neYSeThx nelegoLaLxdu neYSeThx nelegoLaLxde ecacx{\ra}vacocxtatxdu (savasaM. 3; cenanxba. 1332-475); sadaBxkitx nijaneYSeThxya tiLidu satisutarige sadAcArada sanAmxgaRva toV{\ri} ...nivaRMcakatavxdiMda a{\ri}dAcarisabalAlxtane acacxsharaNa noVDA (savasaM. 8; maDimA. 647-247); Arusathxladalilx aritiheneMdu... bAhayxkirxVya mADidaDeVnayayx neYSeThxilalxdananxkakx... (savasaM. 2; alalxma. 916-274); anAdi parashivaniMdAkAravAda... Bakatx maheVshavxra sharaNagaNaMgaLa mahAneYSeThxyiMda... (savasaM. 3; cenanxba. 907-279);  guru tananx vinoVdakekx guruvAda... iSaTxliMgadalilx neYSeThx naTuTx biTuTx tirxvidhava maraLi hiDiyade... (savasaM. 5; akakxma. 199-58); sharxdedhx toVridalilx AcAraliMgava kANuvanu... neYSeThxdoVridalilx guruliMgava kANuvanu... (savasaM. 12; deVshikeVM. 788-238); ayAyx, tanatanage ceYtanayxviduR... tananx nijaneYSeThxye liMgamaMtarxdalalxcocxtitx... (savasaM. 14; mUrusA. 19-19).}}
 \end{entry}
 
 \begin{entry}
 \word{nosalikukx}
-\src{kA}
-\gl{kirx}
-\mng{}
-\expl{haNege viBUtiyiTuTx shudidhxVkaraNada saMsAkxravanunx mADu (rUDhi).}
+\meaning{\arthanonum{haNege viBUtiyiTuTx shudidhxVkaraNada saMsAkxravanunx mADu (rUDhi).}}
 \end{entry}
 
 \begin{entry}
 \word{noVTa}
-\src{kA}
-\gl{nA}
-\mng{kaNeNxvemucacxde karasathxladalilxruva iSaTxliMgavanunx noVDuvike; animiSadaqSiTx:}
-\expl{nimamx noVTavanaMtasuKa nimamx kUTa paramasuKa apaTalakoVTiroVmaMgaLu kaMgaLAgi noVDutitxdedxnu (basava. samava. 1-118-491).}
+\meaning{\arthanonum{kaNeNxvemucacxde karasathxladalilxruva iSaTxliMgavanunx noVDuvike; animiSadaqSiTx.}
+\ullekha{sUyaRna udaya tAvarege jiVvALa... olida rAvinalilx noVTa jiVvALavayAyx... (savasaM. 1; basava. 367-88); tanu tarataraMboVgi, manavu nimamxlilx silukitatxyAyx... noVTaveV pArxNavAgi apAyxyana nimamxlilx aratudayAyx... (savasaM. 2; alalxma. 100-31); aMgada meVle liMgavilalxdananxkakxra... kaMgaLa noVTakekx iMbAvudu heVLA... (savasaM. 3; cenanxba. 849-253); mATakUTadalilx basavaNaNxnilalx... noVTakUTadalilx parxBudeVvarilalx... (savasaM. 5; akakxma. 335-100); noVTada Bakitx basavaniMdAyitutx... (savasaM. 4; sidadhxrA. 747-210).}}
 \end{entry}
 
 \begin{entry}
 \word{noVTakUTa}
-\src{kA}
-\gl{nA}
-\mng{keVvala daqSiTxmAtarxdiMdaleV aikayxgoLuLxvudu:}
-\expl{mATa kUTa basavaNaNxMgAyitutx noVTakUTa parxBudeVvarigAyitutx (akakxma. samava. 5-85-275).)}
+\meaning{\arthanonum{keVvala daqSiTxmAtarxdiMdaleV aikayxgoLuLxvudu.}
+\ullekha{mATakUTadalilx basavaNaNxnilalx... noVTakUTadalilx parxBudeVvarilalx... (savasaM. 5; akakxma. 335-100).}}
 \end{entry}
 
 \begin{entry}
 \word{nwli}
-\src{kA}
-\gl{nA}
-\mng{haThayoVgada karxmagaLalilx oMdu vidha:}
-\expl{kaMBamaM nilisi eDacAri balacAriyAgi kukiSxya tirugisuvudeV nwliyenisuvudu (pArake. 261).}
+\meaning{\arthanonum{haThayoVgada karxmagaLalilx oMdu vidha.}
+\ullekha{kaMBamaM nilisi eDacAri balacAriyAgi kukiSxya tirugisuvudeV nwliyenisuvudu (pArake. 261).}}
 \end{entry}
 
 \begin{entry}
 \word{paMca parxdhAnaru}
-\src{va}
-\mng{paMcashakitxgaLanunx niyaMtirxsuva adhideVvategaLu. avareMdare,
-  sadAshiva, Ishavxra, rudarx, viSuNx, barxhamx. (noVDi : {\bf adhideVvategaLu})}
+\meaning{\arthanonum{paMcashakitxgaLanunx niyaMtirxsuva adhideVvategaLu. avareMdare,
+  sadAshiva, Ishavxra, rudarx, viSuNx, barxhamx. (noVDi : adhideVvategaLu)}}
 \end{entry}
 
 \begin{entry}
 \word{paMca barxhamxru}
-\src{va}
-\mng{paqthivx, jala, aginx, vAyu matutx AkAsha eMba BUtagaLa
+\meaning{\arthanonum{paqthivx, jala, aginx, vAyu matutx AkAsha eMba BUtagaLa
   adhideVvategaLAda AcAraliMga, guruliMga, shivaliMga, jaMgamaliMga
   matutx parxsAdaliMga ivareV paMcabarxhamxru. kelavu veVLe I
   liMgagaLa badalu parashivana aidu muKagaLAda sadoyxVjAta, vAmadeVva,
 aGoVra, tatupxruSa, IshAna ivareV paMcabarxhamxrenunxvudU uMTu. I
 athaRdalilx sadAshiva, Ishavxra, barxhamx, viSuNx matutx rudarxrU saha
-paMcabarxhamxreV. (8:427)}
+paMcabarxhamxreV. (8:427); pArxNaliMgige paradeYva pUjeyuMTe?... rudarx, Ishavxra, sadAshivareMba paMcabarxhamxru... (savasaM. 10; kADasi. 244-157).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcakaMcuka}
 \src{saM}
-\mng{mUvatAtxru tatatxvXgaLa aMtagaRtavAgiruva kale,
+\meaning{\arthanonum{mUvatAtxru tatatxvXgaLa aMtagaRtavAgiruva kale,
 videyx, kAla, rAga matutx niyati eMba paMcatatatxvXgaLeV paMcakaMcukagaLu. ivugaLanunx
-mishArxdhavxgaLeMdU kareyalAgide.}
+mishArxdhavxgaLeMdU kareyalAgide.}}
+\medskip
 \begin{shl}
 kalAvidAyxkAlarAgAH niyatiH paMcakaMcukamf |\\
 ArAgAdAkalAtatatxvXM mishArxdhAvxKayxM tu paMcakamf ||
 \end{shl}
+\medskip
 \pauthor{(shi.ta.ra., 9.3. 36, 38)}
-\SEE{SaTftirxMshatftatatxvX}
+\newmeaning{\arthanonum{\SEE{SaTftirxMshatftatatxvX}}}
 \end{entry}
 
 \begin{entry}
 \word{paMcaka}
-\src{kA}
-\gl{}
-\info{moVpu}{/47}{50}{1951}
-\begin{shl}
-biTuTx mU\char'273nu a\char'273\char'371\char'311yaTaTx nAlakxnu
-keDe-\\
-meTaTx paMcakava muMdA\char'273\char'304\\
-suTeTxVLanaTiTx naSaTxva mADuteMTanu\\
-muTiTxsu navavidhadalilx
-\end{shl}
+\meaning{\ullekha{Asitx BAtiyeMba Bititxya meVle... asitx BAti pirxyaM rUpaM nAma ceVtayxMshapaMcakaM... (savasaM. 1; basava. 1029-277); akAradAdiyanari, kaSxkAradaMtayxva tiLi... veVdAdi paMcakadAdiyanari... (savasaM. 2; alalxma. 743-204); vAgAdi kameVMdirxyaMgaLu ivakekx ivara... iMtiV paMcakameVRMdirxyaMgaLailx carisade sucAritarxdalilx... (savasaM. 3; cenanxba. 1554-565); sadugxru sAvxmi shiSayxMge anugarxhava mADuvalilx... paMcakaLashadaBiSeVkava mADisalu... (savasaM. 5; akakxma. 393-119); guruvAgi baMdenege diVkeSxya mADiri... jaMgamavAgi baMdenanx parxpaMcakatanava kaLedu... (savasaM. 4; sidadhxrA. 1311-379).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcakajAjxya}
-\src{kA}
-\gl{nAmapada}
-\info{sA.ga.sAM.}{anubaMdha-2 sAnaMdagaNeVshavxra ragaLe}{82}{1976}
-\begin{shl}
-paMcAmaqta parimaLoVdakava salisireV\\
-paMcakajAjxyagaLa deVva citetxYsireV
-\end{shl}
-\mng{paMcakajAjxya = aidu padAthaRgaLu seVri Ada kajAjxya}
-\end{entry}
-
-\begin{entry}
-\word{paMcakatatavx}
-\src{kA}
-\gl{nAmapada}
-\info{jimasavxva}{112}{95}{1983}
-\begin{shl}
-Atamx, tananx saguNAnaMda suKakeLasi parashivanu \\
-ninanx niraduMTumADidanu\\
-Atamx, tananx muKadiMdAda paMca paMcakatatavxvaM\\
-ninage deVhavenisidanu. ||\,1\,||
-\end{shl}
+\meaning{\ullekha{kavi kavigaLeMdu hesariTuTxkoMDu nuDiva aNaNxgaLirA!... paMcakajAjxyagaLelalx saviduMDu capapxrisi hipepxya mADi... (savasaM. 14; sidadhxrA. 969-447); enanxMtaraMgada Aru Buvanada meVle toVrutipaR... enanx jihevx nimage SaDurasa paMcakajAjxyagaLa darxvayxva... (savasaM. 14; SaNumxKa. 723-322); paramabeLaginiMdeseva... patirx puSapx PalahAra paMcakajAjxya paramAnanx pAyasa... (savasaM. 14; mUrusA. 17-17); kALagadoLu jeDedalege muDidaleyakoTaTx... meVLeYsi paMcapAyasa paMcakajAjxya... (savasaM. 10; kuSaTxgi. 593-289).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcakaBUta}
-\src{kA}
-\gl{nA}
-\mng{padAthaRgaLa mUlavasutxgaLenisida paqthivx, apupx, teVjasusx, vAyu matutx AkAshagaLeMba aidu bageya tatatxvXgaLu:}
-\expl{hiDida paMcaBUtagaDaNadoDaleMbudaM oDeyariMgoDaveyaM koDu (diVkASxboV. 10-5).}
+\meaning{\arthanonum{padAthaRgaLa mUlavasutxgaLenisida paqthivx, apupx, teVjasusx, vAyu matutx AkAshagaLeMba aidu bageya tatatxvXgaLu.}
+\ullekha{hiDida paMcaBUtagaDaNadoDaleMbudaM oDeyariMgoDaveyaM koDu (diVkASxboV. 10-5).}}
 \end{entry}
 
 \begin{entry}
 \word{paMcakameVRMdirxya}
 \src{saM}
-\mng{mUvatAtxru tatAtxvXMtagaRta kirxyAsAdhaka
+\meaning{\arthanonum{mUvatAtxru tatAtxvXMtagaRta kirxyAsAdhaka
 iMdirxyagaLu. vAkf, pANi, pAda, pAyu (guda), upasathx (jananeVMdirxya)-ivu
-paMcakameRVMdirxyagaLu.}
-\mng{ucAcxraNakirxyege heVtu vAkf (mAtu), koDuva-sivxVkarisuva kirxyege heVtu pANi
+paMcakameRVMdirxyagaLu.
+ucAcxraNakirxyege heVtu vAkf (mAtu), koDuva-sivxVkarisuva kirxyege heVtu pANi
 (keYgaLu). hoVguva matutx baruva kirxyege heVtu pAda (kAlugaLu), uMDa ananxvu
 jiVNaRvAgalu malavisajaRne kirxyege heVtu pAyu (guda), reVtasusx, mUtarxgaLa
-tAyxgakirxyege sAdhana upasathx (jananeVMdirxya) eMba paMcakameRVMdirxyagaLu.}
+tAyxgakirxyege sAdhana upasathx (jananeVMdirxya) eMba paMcakameRVMdirxyagaLu.}}
+\medskip
 \begin{shl}
 jAcnxneVMdirxyANi paMcApi paMcakameRVMdirxyANi ca |
 \end{shl}
+\medskip
 \pauthor{(si.shi., 8. 14)}
+\medskip
 \begin{shl}
 vAkf ca pANishacx pAdashacx pAyushocxVpasathxmitayxpi |\\
 kameRVMdirxyANi paMceYSAM guNAH paMcaparxkiVtiRtAH ||
 \end{shl}
+\medskip
 \pauthor{(shi.ta.ra., 9. 3.12)}
 \begin{shl}
 tatarx ucAcxraNakirxyAheVtuvARkf, dAnAdAnAdikirxyAheVtuH pANiH, gamanAgamana-
 kirxyAsAdhanaM pAdaH, BukatxjiVNaRmalaparitAyxgasAdhanaM pAyuH, reVtoVmUtarx-
 paritAyxgakirxyAsAdhanamupasathxkamf |
 \end{shl}
+\medskip
 \pauthor{(shi.maM., pu. 54)}
 \SEE{mUvatAtxru tatatxvX}
-
-\src{kA}
-\gl{nA}
-\mng{kamaRgaLige kAraNavAda vAkukx, pANi, pAda, pAyu matutx guhayx eMba aidu iMdirxyagaLu:}
-\expl{vAkukx pANi pAda pAyu guhayxveMba paMcakameRVMdirxyagaLivaru paricArakaru (cenanxba. samava. 3-330-1000); vAkukx pANi pAda pAyu guhayxveMbivu paMcakameRVMdirxyaMgaLu (caMdima. samava. 7-219-654).}
+\newmeaning{\arthanonum{kamaRgaLige kAraNavAda vAkukx, pANi, pAda, pAyu matutx guhayx eMba aidu iMdirxyagaLu.}
+\ullekha{vAkukx pANi pAda pAyu guhayxveMba paMcakameRVMdirxyagaLivaru paricArakaru (savasaM. 3; cenanxba. 1000-330); vAkukx pANi pAda pAyu guhayxveMbivu paMcakameRVMdirxyaMgaLu (savasaM. 7; caMdima. 654-219); vAgAdi kameRVMdirxyaMgaLu... iMtiV paMcakameRVMdirxyaMgaLalilx carisade sucAritarxdalilx... (savasaM. 3; cenanxba. 1554-565); AkAshadoLagana AkAsha, jAcnxna... hiVMge paMcakameRVMdirxyaMgaLalilxyU... (savasaM. 11; toVMTasi. 335-157); paqthivxya citatxda paMcakameRVMdirxyaMgaLeYdU... (savasaM. 8; maDimA. 669-249); Are niVnAre mAyada baleya... paMcakameRVMdirxyaMgaLa baleyu... (savasaM. 14; heVmaga. 1041-479); sharaNana iMdirxya karaNaMgaLu shivAcAradalilx... paMcakameRVMdirxyaMgaLu. ivakekx vivara... (savasaM. 6; uripe. 1548-566).}}
 \end{entry}
