7 pages corrections are complete in 009.tex

--- a/007.tex
+++ b/007.tex
@@ -4716,7 +4716,8 @@ paritAyxgakirxyAsAdhanamupasathxkamf |
 \end{shl}
 \medskip
 \pauthor{(shi.maM., pu. 54)}
-\SEE{mUvatAtxru tatatxvX}
+\newmeaning{\arthanonum{\SEE{mUvatAtxru tatatxvX}}}
 \newmeaning{\arthanonum{kamaRgaLige kAraNavAda vAkukx, pANi, pAda, pAyu matutx guhayx eMba aidu iMdirxyagaLu.}
 \ullekha{vAkukx pANi pAda pAyu guhayxveMba paMcakameRVMdirxyagaLivaru paricArakaru (savasaM. 3; cenanxba. 1000-330); vAkukx pANi pAda pAyu guhayxveMbivu paMcakameRVMdirxyaMgaLu (savasaM. 7; caMdima. 654-219); vAgAdi kameRVMdirxyaMgaLu... iMtiV paMcakameRVMdirxyaMgaLalilx carisade sucAritarxdalilx... (savasaM. 3; cenanxba. 1554-565); AkAshadoLagana AkAsha, jAcnxna... hiVMge paMcakameRVMdirxyaMgaLalilxyU... (savasaM. 11; toVMTasi. 335-157); paqthivxya citatxda paMcakameRVMdirxyaMgaLeYdU... (savasaM. 8; maDimA. 669-249); Are niVnAre mAyada baleya... paMcakameRVMdirxyaMgaLa baleyu... (savasaM. 14; heVmaga. 1041-479); sharaNana iMdirxya karaNaMgaLu shivAcAradalilx... paMcakameRVMdirxyaMgaLu. ivakekx vivara... (savasaM. 6; uripe. 1548-566).}}
 \end{entry}
+
