20 pages formated in tex-for-print file

--- a/009.tex
+++ b/009.tex
@@ -460,15 +460,13 @@ parashivanalilx beretiruvudanUnx mareyuvudeV jAcnxnanaSaTx.}
 \ullekha{dhanamadadiMda, sayadAnamadadiMda mADideneMbudu... iMtiV paMcaparuSadiMda muTiTx niVDida padAthaRvelalxvu... (savasaM. 1; basava. 1225-338).}}
 \end{entry}
 
-%raghu, jss_009.pdf, jss_010.pdf, 
-
 \begin{entry}
 \word{paMcapalalxva}
-\src{kA}
-\gl{nA}
-\mng{kalashaparxtiSeThx, diVkASxvidhi muMtAda shuBasaMdaBaRgaLalilx baLasuva Ala, araLi, basari, neVriLe matutx mAvinaciguru:}
-\expl{gurukalashakekx paMcasUtarxMgaLanikikx paMcapalalxvaMgaLanikikx paMcamuKaMgaLanikikx gurukalashavaM sAthxpayxvaM mADuvudu (gaNaBA. 189-22); paMcAmaqtaMgaLa tarisi parimisharxmaM mADi shiSayxmUdhinxRyoLu tadugxrumUtiR paMcapalalxvagaLiM saMporxVkiSxsuvudu shiSayxna shirakekx (viVsheYpu. 7-109-10).}
+\meaning{\arthanonum{kalashaparxtiSeThx, diVkASxvidhi muMtAda shuBasaMdaBaRgaLalilx baLasuva Ala, araLi, basari, neVriLe matutx mAvinaciguru.}
+\ullekha{gurukalashakekx paMcasUtarxMgaLanikikx paMcapalalxvaMgaLanikikx paMcamuKaMgaLanikikx gurukalashavaM sAthxpayxvaM mADuvudu (gaNaBA. 189-22); paMcAmaqtaMgaLa tarisi parimisharxmaM mADi shiSayxmUdhinxRyoLu tadugxrumUtiR paMcapalalxvagaLiM saMporxVkiSxsuvudu shiSayxna shirakekx (viVsheYpu. 7-109-10); Bavitanakekx heVsi BakatxnAgabeVkeMbAtanu... paMcapalalxvaMgaLanikikx... (savasaM. 3; cenanxba. 1428-511).}}
 \end{entry}
+
+%raghu, 009.pdf, 010.pdf 
 
 \begin{entry}
 \word{paMcaparxNava}
